# audible-util

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: python_parser.py  simple_json_parser.py
src/: cli.rs  main.rs  voucher.rs
src/models/: chapters.rs  ffprobe_format.rs  mod.rs  voucher.rs
tests/: integration.rs
