[package]
name = "audible-util"
version = "0.3.0"
edition = "2021"
description = "A utility for converting Audible .aaxc files to common audio formats (mp3, wav, flac), with optional splitting by chapters."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
Inflector = { version = "0.11", default-features = false }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"
which = "8.0"
[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
predicates = "3.1"
